# blogger

./: .coderabbit.yaml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BACKEND_IMPLEMENTATION_STEPS.md  Dockerfile  FASTAPI_INTEGRATION.md  Pipfile  README.md  blog_app_complete_dump.sql  blog_app_dump.sql  code_review.md  docker-compose.prod.yml  docker-compose.yml  generate_blog_dump.py  load_seed_data.py  manage_docs.py  pyproject.toml  reflection.md  seed3.sql
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
accounts/: admin.py  models.py  tests.py  urls.py  views.py
accounts/management/commands/: populate_account_choices.py
accounts/migrations/: 0001_initial.py  0002_remove_userpreferences_user_and_more.py  0003_alter_userprofile_user.py
accounts/templates/accounts/: base.html  dashboard.html  login.html  password_change.html  password_change_done.html  profile.html  register.html
api_docs/: __init__.py  app.py  apps.py  config.py  main.py  router.py  run_docs.py  schemas.py
api_docs/management/: __init__.py
api_docs/management/commands/: run_docs_server.py
blog/: settings.py  urls.py
blog_app/: admin.py  api_urls.py  api_views.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
blog_app/management/commands/: load_seed_data.py  populate_all_choices.py  populate_blog_choices.py
blog_app/migrations/: 0001_initial.py  0002_delete_comment.py  0003_poststatus_and_more.py
blog_app/templates/blog_app/: base.html  homepage.html
comments/: admin.py  api_urls.py  api_views.py  filters.py  models.py  serializers.py
comments/management/commands/: populate_comments_choices.py
comments/migrations/: 0001_initial.py
content/: admin.py  api_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_migrate_data.py
media/: admin.py  models.py
media/management/commands/: populate_media_choices.py
media/migrations/: 0001_initial.py  0002_documentfile_auto_detected_type_and_more.py  0003_remove_documentcategory_parent_and_more.py
scripts/: check_env_example.py  deploy.ps1  deploy.sh  init-db.sql
